2008-03-31  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/gio-sharp.dll.config.in: map gio to libgio-2.0.so

2008-03-21  Mike Kestner  <mkestner@novell.com>

	* initial checkin of project.  It builds but is spewing
	generation warnings and is completely unaudited.  Enjoy!
