@@ -15,7 +15,8 @@ EXTRA_DIST = $(RAW_API) $(METADATA) $(customs) $(sources) gio-sharp-unstable.pc.
 
 references = $(GLIB_SHARP_LIBS)
 
-sources =
+sources =		\
+	FileFactory.cs
 
 customs =
 
